<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Altimeter</string>
    <string name="menu_settings">Settings</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="waiting_for_fix">Waiting for GPS…</string>
    <string name="no_internet_connection">No internet connection</string>

    <plurals name="altitude_meters">
        <item quantity="one">Altitude: 1 meter</item>
        <item quantity="other">Altitude: %f meters</item>
    </plurals>
    <plurals name="altitude_yards">
        <item quantity="one">Altitude: 1 yard</item>
        <item quantity="other">Altitude: %f yards</item>
    </plurals>
    <plurals name="altitude_feet">
        <item quantity="one">Altitude: 1 foot</item>
        <item quantity="other">Altitude: %f feet</item>
    </plurals>

    <string name="longitude">Longitude: %f°</string>
    <string name="latitude">Latitude: %f°</string>
    <string name="settings_disp">Display</string>
    <string name="settings_max_alt">Top altitude</string>
    <string name="settings_max_alt_sum">Higher altitude displayed</string>
    <string name="settings_unit">Unit</string>
    <string name="settings_unit_summary">Unit to use to show the altitude</string>
    <string name="settings_default_unit">meters</string>

    <string-array name="settings_units">
        <item>Meters</item>
        <item>Feet</item>
        <item>Yards</item>
    </string-array>
    <string-array name="settings_units_values">
        <item>meters</item>
        <item>feet</item>
        <item>yards</item>
    </string-array>

</resources>