<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="Display"
        android:summary="Display related settings"
        android:title="@string/settings_disp" >
        <EditTextPreference
            android:defaultValue="9000"
            android:inputType="number"
            android:key="max_alt"
            android:singleLine="true"
            android:summary="@string/settings_max_alt_sum"
            android:title="@string/settings_max_alt" />

        <ListPreference
            android:defaultValue="@string/settings_default_unit"
            android:dialogTitle="@string/settings_unit"
            android:entries="@array/settings_units"
            android:entryValues="@array/settings_units_values"
            android:key="unit"
            android:summary="@string/settings_unit_summary"
            android:title="@string/settings_unit" />
    </PreferenceCategory>

</PreferenceScreen>